--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,4 @@
-[package]
-name = "reid"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-## LLVM Bindings
-llvm-sys = "160"
-## Make it easier to generate errors
-thiserror = "1.0.44"
+[workspace]
+members = [
+    "reid"
+]
