--- a/reid/Cargo.toml
+++ b/reid/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2021"
 llvm-sys = "160"
 ## Make it easier to generate errors
 thiserror = "1.0.44"
+reid-lib = { path = "../reid-llvm-lib" }
