--- a/reid/Cargo.toml
+++ b/reid/Cargo.toml
@@ -5,9 +5,17 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[features]
+default = ["color"]
+
+color = ["colored"]
+
 [dependencies]
 ## LLVM Bindings
 llvm-sys = "160"
 ## Make it easier to generate errors
 thiserror = "1.0.44"
 reid-lib = { path = "../reid-llvm-lib" }
+
+colored = {version = "3.0.0", optional = true}
