--- a/reid/Cargo.toml
+++ b/reid/Cargo.toml
@@ -14,6 +14,6 @@ color = ["colored"]
 [dependencies]
 ## Make it easier to generate errors
 thiserror = "1.0.44"
-reid-lib = { path = "../reid-llvm-lib" }
+reid-lib = { path = "../reid-llvm-lib", version = "0.1.0", registry = "gitea-teascade" }
 
 colored = {version = "3.0.0", optional = true}
