--- a/reid/Cargo.toml
+++ b/reid/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reid"
-version = "0.1.0"
+version = "1.0.0-beta.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,6 +14,6 @@ color = ["colored"]
 [dependencies]
 ## Make it easier to generate errors
 thiserror = "1.0.44"
-reid-lib = { path = "../reid-llvm-lib", version = "0.1.0" }
+reid-lib = { path = "../reid-llvm-lib", version = "1.0.0-beta.1", registry="gitea-teascade" }
 
 colored = {version = "3.0.0", optional = true}
