Add simple error diagnostic from parser

--- a/reid/Cargo.toml
+++ b/reid/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 default = ["color"]
 
 color = ["colored"]
+log_output = []
 
 [dependencies]
 ## Make it easier to generate errors
