--- a/reid-lsp/Cargo.toml
+++ b/reid-lsp/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 socket = "0.0.7"
 tokio = { version = "1.47.0", features = ["full"] }
 tower-lsp = "0.20.0"
+reid = { path = "../reid", version = "1.0.0-beta.2", registry="gitea-teascade", features=[] }
+dashmap = "6.1.0"
