Start adding type-information to tooltips

--- a/reid/Cargo.toml
+++ b/reid/Cargo.toml
@@ -11,6 +11,7 @@ default = ["color"]
 
 color = ["colored"]
 log_output = []
+context_debug = []
 
 [dependencies]
 ## Make it easier to generate errors
