Improve syntax highlighting

--- a/reid-lsp/syntaxes/grammar.yaml
+++ b/reid-lsp/syntaxes/grammar.yaml
@@ -1,7 +1,6 @@
 scopeName: source.reid
 patterns:
   - include: "#import"
-  - include: "#extern"
   - include: "#expression"
 repository:
   # function-definition:
@@ -47,6 +46,7 @@ repository:
     patterns:
       - include: "#comment"
       - include: "#fn-signature"
+      - include: "#common-type"
       - include: "#binop-impl"
       - include: "#type-impl"
       - include: "#struct-definition"
@@ -56,25 +56,16 @@ repository:
       - include: "#cast"
       - include: "#function-call"
       - include: "#parenthesis"
-      - include: "#number-literal"
-      - include: "#string-literal"
-      - include: "#common-type"
       - include: "#array"
       - include: "#keywords"
       - include: "#struct-expression"
+      - include: "#number-literal"
+      - include: "#string-literal"
       - include: "#identifier"
       - include: "#punctuation"
   comment:
     match: "\\/\\/(.|\\/)*"
     name: comment.line.double-slash.reid
-  extern:
-    begin: "extern"
-    end: "\\;"
-    beginCaptures:
-      0:
-        name: keyword.fn.reid
-    patterns:
-      - include: "#expression"
   fn-signature:
     begin: "(fn)\\s*(\\w+)\\("
     beginCaptures:
@@ -144,8 +135,15 @@ repository:
     patterns:
       - include: "#expression"
   number-literal:
-    match: "[0-9]+(\\.[0-9]+)?"
-    name: "constant.numeric"
+    patterns:
+      - match: "0x[0-9a-fA-F]+(\\.[0-9a-fA-F]+)?"
+        name: "constant.hexadecimal"
+      - match: "0o[0-7]+(\\.[0-7]+)?"
+        name: "constant.octal"
+      - match: "0b[01]+(\\.[01]+)?"
+        name: "constant.binary"
+      - match: "[0-9]+(\\.[0-9]+)?"
+        name: "constant.numeric"
   string-literal:
     begin: '"'
     end: '"'
@@ -200,11 +198,14 @@ repository:
     patterns:
       - include: "#expression"
   identifier:
-    match: "\\w+"
-    name: variable.language.reid
+    patterns:
+      - match: "[A-Z]\\w*"
+        name: entity.name.type.reid
+      - match: "\\w+"
+        name: variable.language.reid
   keywords:
     patterns: 
-      - match: "let|mut|pub"
+      - match: "let|mut|pub|extern"
         name: "storage.type.reid"
       - match: "if|return"
         name: "keyword.control"
