--- a/reid-lsp/package.json
+++ b/reid-lsp/package.json
@@ -2,7 +2,10 @@
   "name": "reid-lsp",
   "displayName": "Reid Language Server",
   "description": "Language Server Extension for Reid",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "repository": {
+    "url": "https://git.teascade.net/teascade"
+  },
   "engines": {
     "vscode": "^1.102.0"
   },
@@ -19,6 +22,9 @@
         "id": "reid",
         "extensions": [
           ".reid"
+        ],
+        "aliases": [
+          "Reid"
         ]
       }
     ],
