Add language configuration

--- a/reid-lsp/package.json
+++ b/reid-lsp/package.json
@@ -12,9 +12,6 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "onLanguage:reid"
-  ],
   "main": "./dist/extension.js",
   "contributes": {
     "languages": [
@@ -25,7 +22,8 @@
         ],
         "aliases": [
           "Reid"
-        ]
+        ],
+        "configuration": "./language-configuration.json"
       }
     ],
     "configuration": {
