--- a/reid-lsp/package.json
+++ b/reid-lsp/package.json
@@ -2,7 +2,7 @@
   "name": "reid-language-server",
   "displayName": "Reid Language Server",
   "description": "Language Server Extension for Reid",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.1",
   "repository": {
     "url": "https://git.teascade.net/teascade"
   },
