--- a/reid-lsp/Cargo.toml
+++ b/reid-lsp/Cargo.toml
@@ -9,3 +9,5 @@ tokio = { version = "1.47.0", features = ["full"] }
 tower-lsp = "0.20.0"
 reid = { path = "../reid", version = "1.0.0-beta.4", registry="gitea-teascade", features=[] }
 dashmap = "6.1.0"
+serde = "*"
+serde_json = "*"
