--- a/reid/Cargo.toml
+++ b/reid/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 
 [features]
-default = ["color"]
+default = ["color", "cli"]
 
 color = ["colored"]
+cli = ["argh", "stderrlog"]
 log_output = []
 context_debug = []
 
@@ -18,4 +19,7 @@ context_debug = []
 thiserror = "1.0.44"
 reid-lib = { path = "../reid-llvm-lib", version = "1.0.0-beta.4", registry="gitea-teascade" }
 
-colored = {version = "3.0.0", optional = true}
+argh = { version = "0.1.13", optional = true }
+stderrlog = { version = "0.6.0", optional = true }
+log = "*"
+colored = { version = "3.0.0", optional = true }
