--- a/reid/Cargo.toml
+++ b/reid/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reid"
-version = "1.0.0-beta.4"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,7 +15,7 @@ cli = ["argh", "stderrlog"]
 [dependencies]
 ## Make it easier to generate errors
 thiserror = "1.0.44"
-reid-lib = { path = "../reid-llvm-lib", version = "1.0.0-beta.4", registry="gitea-teascade" }
+reid-lib = { path = "../reid-llvm-lib", version = "1.0.0", registry="gitea-teascade" }
 
 argh = { version = "0.1.13", optional = true }
 stderrlog = { version = "0.6.0", optional = true }
